# Cyber-Wingman

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  pyproject.toml  railway.json  ruff_output.txt  supabase_full_schema.sql  supabase_profiles_setup.sql
cyber_wingman/: __init__.py
cyber_wingman/agent/: __init__.py  compact.py  context.py  intent_detector.py  loop.py  memory.py  skills.py  subagent.py  user_profile.py
cyber_wingman/agent/tools/: __init__.py  ask.py  base.py  emotion.py  ideal_type_test.py  knowledge_search.py  time.py  (+7 more)
cyber_wingman/api/: __init__.py  app.py
cyber_wingman/bus/: __init__.py  events.py  queue.py
cyber_wingman/config/: settings.py
cyber_wingman/orchestration/: __init__.py  plan_manager.py  task_manager.py
cyber_wingman/providers/: __init__.py  base.py  litellm_provider.py
cyber_wingman/session/: __init__.py  manager.py
docs/plans/: 2026-03-11-chat-redesign-plan.md  2026-03-11-chat-redesign-walkthrough.md  2026-03-11-ui-migration-design.md  2026-03-11-ui-migration-plan.md
frontend/: lint.txt  package-lock.json  package.json
frontend/src/: middleware.ts
prompt/: Alpha 教官 (男-單身).md  御夫女王 (女-已婚).md  毒舌閨蜜 (女-單身).md  維穩軍師 (男-已婚).md
prompt/cn/: Alpha 教官 (男-單身).md  御夫女王 (女-已婚).md  毒舌閨蜜 (女-單身).md  維穩軍師 (男-已婚).md
skills/chat-analyzer/: SKILL.md
skills/chat-reply-coach/: SKILL.md
skills/date-planning/: SKILL.md
skills/gift-advisor/: SKILL.md
skills/parallel-universe/: SKILL.md
skills/persona-builder/: SKILL.md
skills/web-search/: SKILL.md
supabase/migrations/: 20260310_init_sessions_messages.sql
(+48 files in other folders)
